--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.5.0
 anyio==3.7.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.6
 colorama==0.4.6
 dnspython==2.4.1
@@ -13,10 +15,12 @@ pydantic==2.0.3
 pydantic_core==2.3.0
 python-dotenv==1.0.0
 PyYAML==6.0.1
+requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==1.4.47
 starlette==0.27.0
 typing_extensions==4.7.1
+urllib3==2.0.4
 uvicorn==0.23.2
 watchfiles==0.19.0
 websockets==11.0.3
