--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,19 @@
-annotated-types==0.5.0
-anyio==3.7.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
+bcrypt==4.0.1
+blinker==1.6.2
 click==8.1.6
 colorama==0.4.6
-dnspython==2.4.1
+dnspython==2.4.2
 email-validator==2.0.0.post2
-fastapi==0.100.0
+Flask==2.3.2
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
 greenlet==2.0.2
-h11==0.14.0
-httptools==0.6.0
 idna==3.4
-pydantic==2.0.3
-pydantic_core==2.3.0
-python-dotenv==1.0.0
-PyYAML==6.0.1
-requests==2.31.0
-sniffio==1.3.0
+itsdangerous==2.0.1
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 SQLAlchemy==1.4.47
-starlette==0.27.0
-typing_extensions==4.7.1
-urllib3==2.0.4
-uvicorn==0.23.2
-watchfiles==0.19.0
-websockets==11.0.3
+Werkzeug==2.3.6
+WTForms==3.0.1
