--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,10 @@ services:
     environment:
       - SERVER_HOST=https://localhost
       - PROJECT_NAME=Hangman
-      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://user:12345@hangman_app_database:5432/db
+      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://user:12345@hangman_database:5432/db
       - SQLALCHEMY_MAX_POOL_OVERFLOW=20
     ports:
-      - "80:80"
-    volumes:
-      - ./app:/app
+      - "5000:5000"
     networks:
       - development
 
