redid endpoints and utils to make code shorter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - development
     volumes:
-      - ./app:/app
+      - .:/app
 
   database:
     container_name: hangman_database
